src/test/deca/syntax/valid/expr/test_expr_mult.deca
// Description:
//    tests de programme syntaxiquement correct
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    a = a * 2;
}